<resources>
    <string name="app_name">RelativeLogin2</string>
    <string name="sign_in">SIGN IN</string>
    <string name="hello">Hello</string>
    <string name="signin">Sign in !</string>
    <string name="gmail">Gmail</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="password">Password</string>
    <string name="star">**********</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="todo">TODO</string>
    <string name="fitness_club">FITNESS CLUB</string>
    <string name="create_your">Create Your</string>
    <string name="account">Account</string>
    <string name="nikhil_anand">Nikhil Anand</string>
    <string name="full_name">Full Name</string>
    <string name="if_have_account">If have account</string>
    <string name="login_with_social_media">Login with Social Media</string>
    <string name="Sign_up">SIGN UP</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="sign_Up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="create_an_account">Create An Account</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="or_sign_up_with">--------Or sign up with--------</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="or_log_in_with">--------Or Log in with--------</string>
    <string name="Google">Google</string>
    <string name="remember_password">Remember password</string>
    <string name="arrow"><![CDATA[<-]]></string>
</resources>