<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_below="@+id/tv1"
        android:layout_marginStart="30dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/toproundedcard"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/full_name"
            android:textColor="#B71C1C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv3"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="name"
            android:drawableEnd="@drawable/tickmark"
            android:hint="@string/nikhil_anand"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />


        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_below="@+id/et1"
            android:text="@string/gmail"
            android:textColor="#B71C1C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv4"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/tickmark"
            android:hint="@string/abc_gmail_com"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/password"
            android:textColor="#B71C1C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="password"
            android:drawableEnd="@drawable/hide"
            android:hint="@string/star"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et3"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/password"
            android:textColor="#B71C1C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv6"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="password"
            android:drawableEnd="@drawable/hide"
            android:hint="@string/star"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient2"
            android:padding="12dp"
            android:text="@string/Sign_up"
            android:textColor="#F4F3F2"
            android:textSize="22sp"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/if_have_account"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv8"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="2dp"
            android:backgroundTint="#ffffff"
            android:text="@string/sign_in"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>


</RelativeLayout>