<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/dumbbell" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img1"
        android:layout_centerHorizontal="true"
        android:text="@string/fitness_club"
        android:textSize="25sp"
        android:textColor="#ffffff"/>
    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt1"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_back"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_marginTop="60dp" />



        <Button
            android:id="@+id/btn1"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in"
            android:textSize="22sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:backgroundTint="@android:color/transparent"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt2"
            android:background="@drawable/borderbtn"
            tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Sign_up"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#000000"
       android:backgroundTint="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn1"

        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn2"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_with_social_media"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/img2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/instagram"
            android:layout_margin="3dp"/>
        <ImageView
            android:id="@+id/img3"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/twitter"
            android:layout_toEndOf="@+id/img2"
            android:layout_margin="3dp"/>

        <ImageView
            android:id="@+id/img4"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            android:layout_toEndOf="@+id/img3"
            android:contentDescription="@string/todo"
            android:src="@drawable/facebook"
            tools:ignore="ImageContrastCheck" />

    </RelativeLayout>




</RelativeLayout>